--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
+    "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.8",
     "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-icon-badge": "^1.1.3",
     "react-native-numeric-input": "^1.8.3",
     "react-native-reanimated": "~1.4.0",
     "react-native-vector-icons": "^6.6.0",
